make the cleanup time configurable

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -84,9 +84,8 @@ kylin.hbase.default.compression.codec=gzip
 
 # 'auto', 'inmem', 'layer' or 'random' for testing
 kylin.cube.algorithm=random
-
 kylin.security.profile=testing
-
+kylin.storage.cleanup.time.threshold=21600000
 
 ## Config for Restful APP ##
 # database connection settings:
