--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <groupId>org.apache.kylin</groupId>
     <artifactId>kylin</artifactId>
     <packaging>pom</packaging>
-    <version>1.5.2.1-SNAPSHOT</version>
+    <version>1.5.2.1</version>
 
     <name>Kylin:HadoopOLAPEngine</name>
     <url>http://kylin.apache.org</url>
