--- a/examples/test_case_data/localmeta/kylin.properties
+++ b/examples/test_case_data/localmeta/kylin.properties
@@ -58,9 +58,10 @@ kylin.job.yarn.app.rest.check.interval.seconds=10
 #default compression codec for htable,snappy,lzo,gzip,lz4
 kylin.hbase.default.compression.codec=gzip
 
-# test for hadoop job config override
+# for tests
 kylin.job.mr.config.override.test1=test1
 kylin.job.mr.config.override.test2=test2
+kylin.job.controller.lock=org.apache.kylin.job.lock.MockJobLock
 
 
 kylin.security.profile=testing
