minor, adjust config for CI sandbox, to avoid too many reducers in CreateHFile step

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -64,12 +64,14 @@ kylin.job.concurrent.max.limit=10
 # Max reducer number
 kylin.job.mapreduce.max.reducer.number=5
 
-#the percentage of the sampling, default 100%
+# The percentage of the sampling, default 100%
 kylin.job.cubing.inmem.sampling.percent=100
 
 # The cut size for hbase region, in GB.
 # E.g, for cube whose capacity be marked as "SMALL", split region per 10GB by default
-kylin.hbase.region.cut=5
+kylin.hbase.region.cut=0.1
+kylin.hbase.region.count.max=5
+
 # The hfile size of GB, smaller hfile leading to the converting hfile MR has more reducers and be faster
 # set 0 to disable this optimization
 kylin.hbase.hfile.size.gb=2
