--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -67,6 +67,7 @@ kylin.job.mapreduce.max.reducer.number=5
 # The percentage of the sampling, default 100%
 kylin.job.cubing.inmem.sampling.percent=100
 
+kylin.hbase.region.count.max=10
 # The cut size for hbase region, in GB.
 # E.g, for cube whose capacity be marked as "SMALL", split region per 10GB by default
 kylin.hbase.region.cut=0.1
