--- a/storage-hbase/pom.xml
+++ b/storage-hbase/pom.xml
@@ -137,8 +137,10 @@
                                     <include>org.apache.kylin:kylin-core-cube</include>
                                     <include>org.apache.kylin:kylin-invertedindex</include>
                                     <include>com.ning:compress-lzf</include>
-                                    <include>com.n3twork.druid:extendedset</include>
                                     <include>org.roaringbitmap:RoaringBitmap</include>
+                                    <!-- below for inverted index only -->
+                                    <include>com.n3twork.druid:extendedset</include>
+                                    <include>org.apache.commons:commons-lang3</include>
                                 </includes>
                             </artifactSet>
                             <filters>
