KYLIN-1823 split code from kylin-server into kylin-server-base

--- a/pom.xml
+++ b/pom.xml
@@ -681,6 +681,7 @@
         <module>source-kafka</module>
         <module>storage-hbase</module>
         <module>query</module>
+        <module>server-base</module>
         <module>server</module>
         <module>jdbc</module>
         <module>invertedindex</module>
