--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ release.properties
 #IDEA
 *.iml
 #.settings
+.idea/libraries
+.idea/artifacts
 
 # External tool builders
 .externalToolBuilders/
@@ -53,7 +55,6 @@ hs_err_pid*
 # /
 .classpath
 .project
-.idea
 .DS_Store
 target
 logs
