Revert "KYLIN-1821 add intellij per project settings"
This reverts commit 50c948ce5026b34eb90b73ad29d82ff66c918487.

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,6 @@ release.properties
 #IDEA
 *.iml
 #.settings
-.idea/libraries
-.idea/artifacts
 
 # External tool builders
 .externalToolBuilders/
@@ -55,6 +53,7 @@ hs_err_pid*
 # /
 .classpath
 .project
+.idea
 .DS_Store
 target
 logs
