KYLIN-1654: Upgrade http client library to 4.5
Signed-off-by: Li Yang <liyang@apache.org>

--- a/core-common/pom.xml
+++ b/core-common/pom.xml
@@ -65,8 +65,8 @@
             <artifactId>commons-email</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
         </dependency>
         <dependency>
 	        <groupId>org.apache.httpcomponents</groupId>
